src/css/ring.css
.ring-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  justify-content: center;
  /* border: 1px solid red; */
}

.ring-set {
  /* border: 1px solid green; */
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
}

@media (min-width: 730px) {
  .ring-set {
    padding: 0.3rem 0;
  }
}

/* @media (max-height: 732px) {
  .ring-set {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 0;
  }
} */

.ring-control {
  position: relative;
}

.ring-progress {
  pointer-events: stroke;
  user-select: none;
  cursor: pointer;
  z-index: 1;
  position: absolute;
  right: 0;
  top: 0;
}

.ring-segment {
  right: 0;
  top: 50%;
}

@media (min-width: 730px) {
  .ring-segment {
    right: 0;
    top: 50%;
  }
}

.ring-list-container {
  background-color: #e0e0e0;
  border-radius: 0 10px 10px 0;
  cursor: pointer;
  display: flex;
  font-size: 1.15rem;
  font-weight: 600;
  padding: .5rem;
  user-select: none;
  border: 1px solid black;
}

@media (min-width: 730px) {
  .ring-list-container {
    background-color: #e0e0e0;
    border-radius: 0 10px 10px 0;
    font-size: 1.1rem;
    padding: 2rem 0.1rem;
    border: 1px solid black;
  }
}

/* @media (max-height: 732px) {
  .ring-list-container {
    font-size: 1.5rem;
    padding: 1.5rem 1rem;
  }
} */

.ring-table {
  /* position: relative; */
}

tr:not(:last-child) td {
  border-collapse: collapse;
  border-bottom: 1px solid dodgerblue;
  user-select: none;
}

td {
  padding: 5px;
}

.ring-checker {
  width: 10px;
  height: 10px;
  border-radius: 1px;
  border: 1px solid;
}

#ring-list {
  text-align: start;
  padding-right: 1px;
  white-space: nowrap;
}

.ring-label {
  font-size: 1.5rem;
  pointer-events: "none";
  font-weight: 600;
}

.highlight {
  /* fill: red; */
}

.ring-number {
  font-size: 2rem;
  pointer-events: "none";
  font-weight: 900;
}

.polygon-container {
  display: flex;
  flex-direction: column;
  position: absolute;
  height: 70px;
  top: 12%;
  right: 46%;
  z-index: 2;
}

@media (min-width: 730px) {
  .polygon-container {
    top: 15%;
    right: 45%;
  }
}
/* @media (max-height: 732px) {
  .polygon-container {
    top: 15%;
    right: 45%;
  }
} */

.polygon {
  cursor: pointer;
  pointer-events: auto;
  width: 1.5rem;
}
.polygon:hover {
  fill: red;
}

.ring-lever {
  position: absolute;
  width: 7rem;
  cursor: pointer;
  left: 0%;
  top: -18%;
}

/* .ring-lever-sort {
  top: 0px;
}

.ring-lever-unsort {
  top: 0px;
} */

/* @media (min-width: 732px) {
  .ring-lever-sort {
    top: -25px;
  }

  .ring-lever-unsort {
    top: -25px;
  }
} */

/* @media (max-height: 732px) {
  .ring-lever-sort {
    top: -25px;
  }

  .ring-lever-unsort {
    top: -24px;
  }
} */

.ring-heading {
  margin: 0 0 2rem ;
  font-size: 1.2rem;
  text-align: center;
  width: 60%;
  align-self: center;
}

.ring-instruction {
  margin: 0 1rem;
  font-size: 1.5rem;
}
.ring-buttons {
  align-self: center;
  width: 22.75rem;
}

.total_below {
  background-color: rgba(0, 155, 252, 0.95);
  padding: 10px;
  border-radius: 5px;
  text-align: center;
  position: absolute;
  top: -70%;
  left: 25%;
  user-select: none;
  font-size: 1.5rem;
  color: white;
  width: 50%;
}

